# goap-driven-llm-rust

./: .gitignore  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  deny.toml  rust-toolchain.toml
.claude/: settings.json  settings.local.json
.claude/agents/: README.md  async-rust-performance-agent.md  benchmarking-specialist-agent.md  documentation-specialist-agent.md  examples-cli-specialist-agent.md  git-pushing-agent.md  goap-planning-specialist-agent.md  llm-integration-specialist-agent.md  mcp-builder-agent.md  redb-database-specialist-agent.md  rust-clean-code-agent.md  skill-creator-agent.md  testing-specialist-agent.md  theme-factory-agent.md  verification-agent.md  webapp-testing-agent.md
.claude/commands/: speckit.checklist.md  speckit.specify.md
.claude/hooks/: README.md  agent-integration.py  benchmark-validator.py  coverage-analyzer.py  documentation-checker.py  hooks.json  rust-code-quality.py  test-validator.py
.github/: SECURITY.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benches/: cache_bench.rs  comparison_bench.rs  edge_case_bench.rs  learning_effectiveness_bench.rs  planning_bench.rs  reactive_replan_bench.rs  throughput_bench.rs  token_efficiency_bench.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPING_ACTIONS.md  DEVELOPING_HEURISTICS.md  ERROR_HANDLING.md  PERFORMANCE.md  QUICKSTART.md  TUTORIAL_PATTERNS.md  TUTORIAL_PLANNING.md  TUTORIAL_REACTIVE.md
examples/: README.md  basic_planning.rs  cli_wrapper.rs  custom_actions.rs  metrics_collection.rs  pattern_reuse.rs  reactive_replanning.rs  token_optimization.rs
specs/001-goap-llm-planning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: error.rs  lib.rs
tests/: integration.rs
(+44 files in other folders)
