[package]
name = "goap-llm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Goal-Oriented Action Planning (GOAP) system for strategic LLM reasoning"
repository = "https://github.com/yourorg/goap-driven-llm-rust"
keywords = ["goap", "planning", "llm", "ai", "strategic-reasoning"]
categories = ["web-programming", "api-bindings", "command-line-utilities"]


[lib]
name = "goap_llm"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Caching and concurrent data structures
dashmap = "5.5"
lru = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
jsonschema = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3.8"

# Development tools
cargo-watch = "8.2"

[features]
default = []
# Enable experimental features
experimental = []
# Enable persistent storage
persistence = ["serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-assets"]
